[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-markets-analyser"
version = "0.1.0"
description = "A financial markets analysis tool using free financial data APIs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Benjamin Herro", email = "benjamincsherro@hotmail.com"}
]
dependencies = [
    "fastmcp>=0.3.2",
    "yfinance>=0.2.39",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.24.0",
    "asyncio>=3.4.3"
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.5"
]

[project.scripts]
financial-markets-analyser = "financial_markets_analyser.server:main"

[tool.setuptools.packages.find]
include = ["financial_markets_analyser*"]
